<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="list_no_item">没有你要查找的数据</string>
    
    <!-- add bank -->
    <string name="add_bank_hint1">请输入支付密码</string>
    
    <!-- reg -->

    <string name="reg_next">下一步</string>
    <string name="reg_user_name">请填写你的账号</string>
    <string name="reg_user_pwd">请填写你的密码</string>
    <string name="reg_user_code">请输入验证码</string>
    <string name="reg_user_send_code">发送验证码</string>
    <string name="reg2_name">请填写你的姓名</string>
    <string name="reg2_phone">请填写你的手机号</string>
    <string name="reg2_pwd1">请填写你的密码</string>
    <string name="reg2_pwd2">请再次输入密码</string>
    <string name="reg2_email">请填写你的邮箱号码</string>
    <string name="reg2_location">请选择你所在地区</string>
    <string name="reg2_select_one">请选择第一品牌车系</string>
    <string name="reg2_select_two">请选择第二品牌车系</string>
    <string name="reg2_select_tree">请选择第三品牌车系</string>
    <string name="reg2_finish1">恭喜你注册成功！</string>
    <string name="reg2_finish2">开启卖车之旅！</string>

    <!-- login -->
    <string name="account_input_hint">用户名不能为空!</string>   
    <string name="pwd_input_hint">密码不能为空!</string>
	
    <!-- 我的报价 -->
    <string name="xunjia_baojia">我的报价</string>
    <string name="xunjia_chexi">请选择车系</string>
    <string name="xunjia_dijia">请报出汽车底价</string>
    <string name="xunjia_baoxian">请报出保险价格</string>
    <string name="xunjia_shagnpai">请报出牌证价格</string>
    <string name="xunjia_gouzhi">请报车辆购置税价格</string>
    <string name="xunjia_yufu">预付价格：</string>
    <string name="xunjia_fuzeng">请添加附赠商品：</string>
    
    
    <!-- main -->
    <string name="main_order">询价订单</string>
    <string name="main_my_order">我的询价</string>
    <string name="main_rebate">商家返利</string>
    <string name="main_rebate_order_number">订单号：</string>
    <string name="main_rebate_get">已领取</string>
    <string name="main_rebate_not_get">为领取</string>
    <string name="app_name">车惠卖车宝</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_user_hint">请输入用户名</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="reg">注册</string>
    <string name="main_set">设置</string>
    <string name="tabhost_time">全部</string>
    <string name="order_detail">订单详情</string>

    <!-- pull_to_refresh_listview -->


    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>

    <!-- 关于我们 -->
    <string name="upgrade">新版本检测</string>
    <!-- 询价详情 -->
    <string name="order_detail_state">询价状态</string>
    <string name="order_detail_number">询价编号</string>
    <string name="order_detail_car_price">车辆价格</string>
    <string name="order_detail_insurance_price">保险价格</string>
    <string name="order_detail_price">订单价格</string>
    <string name="order_detail_phone">电话号码</string>
    <string name="order_detail_city">提车城市</string>
    <string name="order_detail_introduction">商品简介</string>
    <string name="order_detail_xunjia">立即报价</string>

    <!-- 返利详情 -->
    <string name="rabate_detail">返利详情</string>
    <string name="rabate_detail_state">返利状态</string>
    <string name="rabate_detail_money">返利金额</string>
    <string name="rabate_detail_time">返利时间</string>
    <string name="rabate_detail_tixian">立即提现</string>

    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>

    <!-- 账号管理 -->
    <string name="set_account_persion">个人信息</string>
    <string name="set_account_money">商家认证</string>
    <string name="set_account_name">姓名</string>
    <string name="set_account_phone">手机号</string>
    <string name="set_account_email">邮箱号</string>
    <string name="set_account_city">所在地区</string>
    <string name="set_account_bland">所选品牌</string>
    <string name="set_account_add_bank_top">添加银行卡</string>
    <string name="set_account_add_bank_top2">+银行卡</string>
    <string name="set_account_writer_bank_top">填写银行卡信息</string>
    
    
    <!-- 钱包 -->
    <string name="set_account_balance">钱包余额</string>
    <string name="set_account_now_balance">提现</string>
    <string name="set_account_add_bank_card">添加银行卡</string>
    <string name="set_account_tixian_price">金额(元)</string>
    <string name="set_account_hint_pwd">请输入验证密码</string>
    <string name="set_account_card_holder">持卡人</string>
    <string name="set_account_card_number">卡号</string>
    <string name="set_account_auth_code">获取验证码</string>
    <string name="set_account_withdrawal_amount">提现金额</string>
    <string name="set_account_memory_card">存储卡</string>
    <string name="set_account_memory_card_type">卡类型</string>
    <string name="set_account_memory_card_phone">手机号</string>
    <string name="set_account_wallet7_hint1">中国银行 尾号8888</string>
    <string name="set_account_wallet7_hint2">￥1000</string>
    <string name="set_account_add_bank_finish">恭喜你添加成功！</string>
    <string name="set_account_wallet_finish">提现申请提交</string>
  

    <!-- 意见反馈 -->
    <string name="feddback_hint">用的不爽双两句吧巴拉巴拉</string>
    <string name="feddback_commit">提交</string>

    <!-- 消息平台 -->
    <string name="message_order_state">已支付</string>
    <string name="message_order_time">刚刚 16:16</string>
    <string name="message_order_title">【江宁区】优质龙膜贴膜</string>
    <string name="message_order_sail">套餐特价</string>
    <string name="message_order_money">金额：19:00元 ●数量：10件</string>
    <string name="message_order_phone">13813813888</string>

    <!-- 消息推送 -->
    <string name="sound_on_of">声音开光</string>
    <string name="message_on_off">消息开关</string>
    <string name="message_top_title">消息推送</string>

    <!-- 订单检验 -->
    <string name="order_check_phone">请输入手机号码</string>
    <string name="order_check_pwd">请输入验证码</string>
    <string name="order_check">验证订单</string>

    <!-- 设置 -->
    <string name="set_account">账号管理</string>
    <string name="set_send_message">消息推送</string>
    <string name="set_feedback">意见反馈</string>
    <string name="set_clear">清理缓存</string>
    <string name="set_about">关于平台</string>
    <string name="set_loginOut">退出当前账号</string>

    <!-- 公共 -->
    
    <string name="common_abnormal_server">服务器异常&#8230;</string>
    <string name="common_request_more">查看更多&#8230;</string>
    <string name="common_request_no_title"></string>
    <string name="common_requesting"></string>
    <string name="common_requesting_time_out">请求超时&#8230;</string>
    <string name="common_querying"></string>
    <string name="common_buffering">正在缓冲&#8230;</string>
    <string name="common_loading">正在加载&#8230;</string>
    <string name="common_logining"></string>
    <string name="common_sending">正在发送&#8230;</string>
    <string name="common_downloading">正在下载&#8230;</string>
    <string name="common_uploading">正在上传&#8230;</string>
    <string name="common_openning">正在开启&#8230;</string>
    <string name="common_exitting">正在退出&#8230;</string>
    <string name="common_clearing">正在清理&#8230;</string>
    <string name="common_saving">正在保存&#8230;</string>
    <string name="common_verifying">正在验证&#8230;</string>
    <string name="common_save_success">保存成功</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_btn_start">启动</string>
    <string name="common_btn_save">保存</string>
    <string name="common_btn_enter">进入</string>
    <string name="common_btn_finish">完成</string>
    <string name="common_btn_set">设置</string>
    <string name="common_btn_goto_set">去设置</string>
    <string name="common_btn_detail">详情</string>
    <string name="common_btn_delete">删除</string>
    <string name="common_text_title">标题</string>
    <string name="common_text_title_empty">请输入标题</string>
    <string name="common_text_content">正文</string>
    <string name="common_text_content_empty">请输入正文</string>
    <string name="common_text_publish">发布</string>
    <string name="common_text_search">搜索</string>
    <string name="common_text_order">开通</string>
    <string name="common_text_send">发送</string>
    <string name="msg_isnull">发送信息为空！</string>
    <string name="common_network_unavalible">请打开您的网络连接</string>
    <string name="common_text_tips">提示</string>
    <string name="dialog_message_exitapp">确认退出？</string>
    <string name="dialog_choose_Other">其他</string>
    <string name="dialog_choose_pic_takephoto">拍照</string>
    <string name="dialog_choose_pic_formlocal">从本地选择</string>
    <string name="dialog_load_draff">是否继续编辑草稿？</string>
    <string name="dialog_save_draff">是否保存为草稿？</string>
    <string name="dialog_login_by_other">您的帐号已在其他地方登录</string>

    <!-- 错误码 -->

    <string name="error">请求失败！参数错误</string>
    <string name="error_401_not_auth">帐号或密码错误</string>
    <string name="error_520_time_out">网络不给力，请稍后重试</string>
    <string name="common_error_tips">操作失败,错误代号:%s</string>

</resources>