<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_gray" >

    <LinearLayout
        android:id="@+id/llAccountManage"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/set_bg_down"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/set_account" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/set_account"
            android:singleLine="true"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSendMessage"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/llAccountManage"
        android:background="@drawable/set_bg_down"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/set_sound" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/set_send_message"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

    <!-- 2 -->

    <LinearLayout
        android:layout_below="@id/llSendMessage"
        android:id="@+id/llFeedBack"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/set_bg_down"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/set_feedback" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/set_feedback"
            android:singleLine="true"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llClear"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/llFeedBack"
        android:background="@drawable/set_bg_down"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/set_clear" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/set_clear"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/arrow_right" />
    </LinearLayout>

    <!-- abount -->

    <LinearLayout
        android:id="@+id/llSetAbout"
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/llClear"
        android:background="@drawable/set_bg_down"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/set_about" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/set_about"
            android:singleLine="true"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/arrow_right" />
    </LinearLayout>
	
    <Button
        android:id="@+id/btn_login_out"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/llSetAbout"
        android:layout_marginTop="30dp"
        android:background="@color/red"
        android:text="@string/set_loginOut"
        android:textColor="@color/white"
        android:textSize="15sp"
        />
</RelativeLayout>