<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <include layout="@layout/top_title" />

    <LinearLayout
       
        android:id="@+id/ll_one"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/corners_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_login_user_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/login_chexi_left" />

        <TextView
            android:id="@+id/tv_bland1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/reg2_select_one"
            android:singleLine="true"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_two"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ll_one"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/corners_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/login_chexi_left" />

        <TextView
            android:id="@+id/tv_bland2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/reg2_select_two"
            android:singleLine="true"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tree"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ll_two"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/corners_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/login_chexi_left" />

        <TextView
            android:id="@+id/tv_bland3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/reg2_select_tree"
            android:singleLine="true"
            android:textColor="@color/black" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_next3"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll_tree"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corners_login_btn_bg"
        android:text="@string/reg_next"
        android:textColor="@color/white"
        android:textSize="20sp" />

    		
</RelativeLayout>