<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <include layout="@layout/top_title" />

    <LinearLayout
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:id="@+id/ll_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/corners_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll_user"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_login_user_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/login_user_left" />

            <com.chehui.diy.EditTextWithDel
                android:layout_marginRight="10dp"
                android:id="@+id/et_userName"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.70"
                android:background="@null"
                android:hint="@string/login_user_hint"
                android:singleLine="true"
                android:textColor="@color/black" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/corner_strock" />

        <LinearLayout
            android:id="@+id/ll_pwd"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_login_pwd_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/login_pwd_left" />

            <com.chehui.diy.EditTextWithDel
                android:layout_marginRight="10dp"
                android:id="@+id/et_pwd"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.70"
                android:background="@null"
                android:hint="@string/login_pwd_hint"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/ll_login"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corners_login_btn_bg"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>